[package]
name = "lilith"
version = "0.1.0"
authors = ["king"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = "15.0"
uuid =  { version = "0.8", features = ["v4"] }
shrinkwraprs = "0.3.0"
edn-rs = "0.16.12"
immutable-chunkmap = "0.5.9"
